inserção do contador

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </header>
     <main>
       <ol></ol>
+      <div class="counter"></div>
     </main>
     <footer>
       <a href="https://wa.me/351924422848">Paulo</a>
